--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+/* 모달 열릴 경우 */
+html, body {height: 100%;}
+body.modal-open {overflow: hidden;}
+
 /* 메인 영역 - 공통사항 */
 section > h2 {text-indent: 10px; margin-top: 15px;}
 .pf_wrap, .skl_wrap, .prj_wrap, .cnt_wrap {margin: 15px 0;}
@@ -75,13 +79,16 @@ section > h2 {text-indent: 10px; margin-top: 15px;}
 
 .skl_wrap > .skl_info {border: 1px solid #ccc; padding: 15px 10px; width: 100%; box-sizing: border-box; display: flex; justify-content: space-between; align-items: center; border-radius: 5px;}
 .skl_wrap > .skl_info > p {width: 66%;}
-.skl_wrap > .skl_info > input {width: 30%;}
+.skl_wrap > .skl_info > .skl_info_range_wrap {width: 30%;}
+.skl_wrap > .skl_info > .skl_info_range_wrap > input {width: 100%;}
+.skl_wrap > .skl_info > .skl_info_range_wrap > .range {width: 100%; display: flex; justify-content: space-between;}
+.skl_wrap > .skl_info > .skl_info_range_wrap > .range > span {color: #aaa;}
 
 /* 메인 영역 - 포트폴리오 */
 .prj_left_side, .prj_right_side {width: 47%; margin: 0 auto;}
 
 .prj_l_mockup {height: 410px; position: relative;}
-.prj_l_mku_pc, .prj_l_mku_tab, .prj_l_mku_mob { width: 100%; height: 100%; position: absolute; left: 0; top: 0; padding: 4px; box-sizing: border-box;}
+.prj_l_mku_pc, .prj_l_mku_tab, .prj_l_mku_mob {width: 100%; height: 100%; position: absolute; left: 0; top: 0; padding: 4px; box-sizing: border-box;}
 .mku_pc, .mku_pc_btm, .mku_tab, .mku_mob {position: absolute; transform: translate(-50%, -50%); background: #575757;}
 .mku_pc, .mku_pc_btm {left: 50%;}
 .mku_pc {top: 50%; width: 100%; height: 100%; box-sizing: border-box; border: 6px solid var(--m_color_bk); z-index: 2; border-radius: 5px; max-width: 540px; max-height: 265px;}
@@ -111,6 +118,11 @@ section > h2 {text-indent: 10px; margin-top: 15px;}
 .prj_r_list li {width: 100%; margin: 7px; background: #ccc; padding: 5px; border-radius: 5px; max-width: 45%; cursor: pointer;}
 .prj_r_list img {width: 100%;}
 
+.prj_r_list > p {display: inline-block; text-indent: 5px;}
+.prj_r_list > .list_count {color: #888; margin: 5px; font-size: var(--font_15);}
+.prj_r_list > .list_count::after {display: inline-block; content: '';}
+.prj_r_list > .page_count {font-size: var(--font_16);}
+
 .prj_r_list > .pagination {text-align: center;}
 .prj_r_list > .pagination button {border: none; background: var(--m_color_y-wh); padding: 8px 14px; margin: 4px; cursor: pointer; border-radius: 5px;}
 .prj_r_list > .pagination button:hover {background: #f5ecbf;}
@@ -120,20 +132,20 @@ section > h2 {text-indent: 10px; margin-top: 15px;}
 .prj_r_list > .pagination .pgn_btn:hover {background: #f1e7b3;}
 .prj_r_list > .pagination button:disabled {background: #7e7a62; cursor: not-allowed;}
 
-#prj_modal {display: none; position: fixed; top: 0; left: 0; background: rgba(0, 0, 0, .5); width: 100%; height: 100vh; z-index: 100;}
-.prj_modal_inner {width: 80%; height: 88%; background: #ffffffe3; margin: 85px auto; padding: 10px;}
-.prj_modal_inner > h3 {text-align: center; line-height: 2.4rem; margin: 15px 0;}
-.prj_modal_inner > button {position: absolute; top: 12%; right: 10%; border: none; background: var(--m_color_y-bs); padding: 5px 14px; border-radius: 5px; cursor: pointer;}
+#prj_modal {display: none; position: fixed; top: 0; left: 0; background: rgba(0, 0, 0, .5); width: 100%; height: 100%; z-index: 100;}
+.prj_modal_inner {width: 96%; height: 88%; background: #ffffff; margin: 82px auto; padding: 10px; position: relative;}
+.prj_modal_inner > h3 {text-align: center; line-height: 2.4rem;}
+.prj_modal_inner > button {position: absolute; top: 1.2%; right: 10%; border: none; background: var(--m_color_y-bs); padding: 5px 14px; border-radius: 5px; cursor: pointer;}
 .prj_modal_inner > button:hover {background: var(--m_color_y-wh);}
-.prj_modal_cont {width: 100%;}
+.prj_modal_cont {width: 100%; height: 79vh;}
 .prj_modal_btnwrap {padding: 15px 0px; margin: 6px auto; text-align: center;}
 .prj_modal_btnwrap a {padding: 14px 22px; border-radius: 5px; margin: 15px 0;}
 .prj_mod_btn_plan {background: #eee3ad;}
 .prj_mod_btn_plan:hover {background: var(--m_color_y-wh);}
 .prj_mod_btn_link {background: #555; color: var(--m_color_wh);}
 .prj_mod_btn_link:hover {background: #666;}
-.prj_modal_info {width: 100%; overflow: hidden;}
-.prj_modal_info > picture {display: block; width: 100%; height: 75vh; overflow-y: scroll;}
+.prj_modal_info {width: 100%; height: 100%;}
+.prj_modal_info > picture {display: block; width: 100%; height: 100%; overflow-y: scroll;}
 .prj_modal_info img {width: 100%;}
 
 /* 메인 영역 - 컨텍 */
@@ -169,6 +181,11 @@ section > h2 {text-indent: 10px; margin-top: 15px;}
 
   /* 프로젝트 */
   .mku_tab, .mku_mob {right: -8%;}
+
+  #prj_modal {height: 100vh;}
+  .prj_modal_cont {height: 86vh;}
+  .prj_modal_inner {height: 90%;}
+  .prj_modal_info {height: 95%;}
 }
 
 /* 모바일 크기 */
@@ -189,5 +206,6 @@ section > h2 {text-indent: 10px; margin-top: 15px;}
 
   .prj_right_side {margin-top: 4%;}
 
-  .prj_modal_inner {width: 100%;}
+  .prj_modal_inner {width: 96%; margin: 142px auto;}
+  .prj_modal_cont {height: 72vh;}
 }
